--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Cybersecurity</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+		<link rel="stylesheet" href="dist/theme/white.css">
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
@@ -16,8 +16,165 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<div class="r-stack">
+						<img 
+							index="0" 
+							src="https://wallpapercave.com/dwp1x/wp2691433.png" 
+							width="100%" 
+							height="450">
+					</div>
+					<h3>What is Cybersecurity</h3>
+					<p>
+						Is the way we use techniques to protect individuals and organizations, also to be prepared for inbound attacks.
+					</p>
+				</section>
+				<section>
+					<h3>Why we should care?</h3>
+					<p>
+						We should care about our data and online presence, nowadays we are more vulnerable online than in real life,
+						because of the information we share daily online, also the forms we submit can be stolen by hackers. 
+					</p>
+				</section>
+				<section>
+					<h3>Hackers purposes</h3>
+					<p>
+						If we think of how our data will be used once obtained by other, we might tink just for selling, but another actions
+						such as using personal information for identity fraud or botnet network can cause more harm using your data.
+					</p>
+				</section>
+				<section>
+					<section>
+						<h3>The Cube</h3>
+						<p>
+							The McCumber Cube is a model framework created by John McCumber in 1991 to help organizations establish and evaluate
+							information security initiatives by considering all of the related factors that impact them. This security model has 
+							three dimensions:
+						</p>
+					</section>
+					<section>
+						<h3>Dimensions</h3>
+						<ol>
+							<li>The foundational principles for protecting information systems.</li>
+							<li>The protection of information in each of its possible states.</li>
+							<li>The security measures used to protect data.</li>
+						</ol>
+					</section>
+					<section>
+						<div class="r-stack">
+							<img index="0" src="./assets/one.png" width="450" height="300">
+						</div>
+						<h3>Protecting information</h3>
+						<p>
+							<strong>Confidentiality:</strong> Is a set of rules that prevents sensitive information from being disclosed to 
+							unauthorized people, resources and processes. Methods to ensure confidentiality include:
+							<strong>Data encryption, identity proofing and two factor authentication</strong>  
+						</p>
+					</section>
+					<section>
+						<p>
+							<strong>Integrity: </strong> Ensures that system information or processes are protected from intentional or accidental modification. 
+							One way to ensure integrity is to use a hash function or checksum.
+						</p>
+					</section>
+					<section>
+						<p>
+							<strong>Availability: </strong> Means that authorized users are able to access systems and data when and where needed and 
+							those that do not meet established conditions, are not. This can be achieved by maintaining equipment, performing hardware repairs, 
+							keeping operating systems and software up to date, and creating backups.
+						</p>
+					</section>
+					<section>
+						<div class="r-stack">
+							<img index="0" src="./assets/two.png" width="450" height="300">
+						</div>
+						<h3>Protection of information in each state</h3>
+						<p>
+							<strong>Processing: </strong> Refers to data that is being used to perform an operation such as updating a database 
+							record (data in process).
+						</p>
+					</section>
+					<section>
+						<p>
+							<strong>Storage: </strong> refers to data stored in memory or on a permanent storage device such as a hard drive, 
+							solid-state drive or USB drive (data at rest).
+						</p>
+					</section>
+					<section>
+						<p>
+							<strong>Transmission: </strong> refers to data traveling between information systems (data in transit).
+						</p>
+					</section>
+					<section>
+						<div class="r-stack">
+							<img index="0" src="./assets/three.png" width="450" height="300">
+						</div>
+						<h3>Security measures to protect data</h3>
+						<p>
+							<strong>Awareness, training and education: </strong> Are the measures put in place by an organization to ensure 
+							that users are knowledgeable about potential security threats and the actions they can take to protect information systems.
+						</p>
+					</section>
+					<section>
+						<p>
+							<strong>Technology: </strong> Refers to the software- and hardware-based solutions designed to protect information systems 
+							such as firewalls, which continuously monitor your network in search of possible malicious incidents.
+						</p>
+					</section>
+					<section>
+						<p>
+							<strong>Policy and procedure: </strong> Refers to the administrative controls that provide a foundation for how an organization 
+							implements information assurance, such as incident response plans and best practice guidelines.
+						</p>
+					</section>
+				</section>
+				<section>
+					<section>
+						<div class="r-stack">
+							<img 
+								index="0" 
+								src="https://images.unsplash.com/photo-1642783327432-d269921e0f20?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8bWFsd2FyZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" 
+								width="100%" 
+								height="450">
+						</div>
+						<h3>Key motivations of cyber-attacks</h3>
+						<p>Political, challenge, sabotage, competitiveness, financial and social</p>
+					</section>
+					<section>
+						<p><strong>Political</strong></p>
+						<p>
+							It is common in electoral campaigns electoral parties try to sabotage their opponent leaking data and stealing sensitive 
+							data that compromise elections.
+						</p>
+					</section>
+					<section>
+						<p><strong>Challenge</strong></p>
+						<p>
+							Some hackers feel motivated to bypass protections of systems only to prove the system is vulnerable and take credit for that forums of
+							the dark web.
+						</p>
+					</section>
+					<section>
+						<p><strong>Sabotage</strong></p>
+						<p>
+							Meanwhile other just want to cause harm to distributed systems and organizations, or even personal purposes using advanced techniques
+							to remain on the systems and cause long-term issues.
+						</p>
+					</section>
+					<section>
+						<p><strong>Competitiveness</strong></p>
+						<p>It is well know attacks against large companies is performed to get data and know the next steps of the competitor to gain advantage in the market 
+							through espionage.
+						</p>
+					</section>
+					<section>
+						<p><strong>Financial</strong></p>
+						<p>Nowadays financial instituions are targeted by daily sophisticated cyber attacks such as APT attacks to steal huge amounts of money and credit cards
+							to finance ilegal activities. 
+						</p>
+					</section>
+				  </section>
+
 			</div>
 		</div>
 
